--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./bin/www",
   "scripts": {
     "start": "node -r esm ./bin/www",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "npm run start"
   },
   "dependencies": {
     "cookie-parser": "^1.4.5",
