--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.10.0",
     "netlify-lambda": "^1.6.3",
     "node-cron": "^2.0.3",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "node-schedule": "^1.3.2"
   }
 }
