--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node -r esm ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
@@ -19,6 +20,7 @@
     "netlify-lambda": "^1.6.3",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.0",
+    "node-localstorage": "^2.1.6",
     "node-schedule": "^1.3.2"
   }
 }
